aquitard/.config/Code - OSS/logs/20191103T111352/exthost1/output_logging_20191103T121430/5-Code.log
[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"

[Done] exited with code=0 in 0.062 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
  File "/home/aquitard/Projects/cemetary_modflowpy/main.py", line 33
    Flopy objects
    ^
IndentationError: unexpected indent

[Done] exited with code=1 in 0.035 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
  File "/home/aquitard/Projects/cemetary_modflowpy/main.py", line 97
    Write the model input files
    ^
IndentationError: unexpected indent

[Done] exited with code=1 in 0.032 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
Traceback (most recent call last):
  File "/home/aquitard/Projects/cemetary_modflowpy/main.py", line 2, in <module>
    import flopy
ModuleNotFoundError: No module named 'flopy'

[Done] exited with code=1 in 0.227 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
flopy is installed in /usr/lib/python3.7/site-packages/flopy
Adding  20 GHBs for stress period 1.
Adding  20 GHBs for stress period 2.
Traceback (most recent call last):
  File "/home/aquitard/Projects/cemetary_modflowpy/main.py", line 101, in <module>
    success, mfoutput = mf.run_model(silent=True, pause=False, report=True)
  File "/usr/lib/python3.7/site-packages/flopy/mbase.py", line 1195, in run_model
    normal_msg=normal_msg)
  File "/usr/lib/python3.7/site-packages/flopy/mbase.py", line 1539, in run_model
    raise Exception(s)
Exception: The program mf2005 does not exist or is not executable.

[Done] exited with code=1 in 1.959 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
flopy is installed in /usr/lib/python3.7/site-packages/flopy
Adding  20 GHBs for stress period 1.
Adding  20 GHBs for stress period 2.
Levels:  [ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]
Extent:  (50.0, 950.0, 50.0, 950.0)
*****Processing time:  1.0
Head statistics
  min:  10.0
  max:  10.0
  std:  0.0
/usr/lib/python3.7/site-packages/flopy/plot/map.py:290: UserWarning: No contour levels were found within the data range.
  contour_set = ax.tricontour(triang, plotarray, **kwargs)
*****Processing time:  101.0
Head statistics
  min:  0.025931068
  max:  9.998436
  std:  3.2574987
*****Processing time:  201.0
Head statistics
  min:  0.018019993
  max:  9.994541
  std:  3.1899076

[Done] exited with code=0 in 1.978 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
flopy is installed in /usr/lib/python3.7/site-packages/flopy
Adding  10 GHBs for stress period 1.
Adding  10 GHBs for stress period 2.
Levels:  [ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]
Extent:  (10.0, 90.0, 10.0, 90.0)
*****Processing time:  1.0
Head statistics
  min:  10.0
  max:  10.0
  std:  0.0
/usr/lib/python3.7/site-packages/flopy/plot/map.py:290: UserWarning: No contour levels were found within the data range.
  contour_set = ax.tricontour(triang, plotarray, **kwargs)
*****Processing time:  101.0
Head statistics
  min:  0.13408042
  max:  9.888266
  std:  3.4477768
*****Processing time:  201.0
Head statistics
  min:  0.12681848
  max:  9.885522
  std:  3.4224842

[Done] exited with code=0 in 1.685 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
flopy is installed in /usr/lib/python3.7/site-packages/flopy
Adding  10 GHBs for stress period 1.
Adding  10 GHBs for stress period 2.
Levels:  [ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]
Extent:  (10.0, 90.0, 10.0, 90.0)
*****Processing time:  1.0
Head statistics
  min:  10.0
  max:  10.0
  std:  0.0
/usr/lib/python3.7/site-packages/flopy/plot/map.py:290: UserWarning: No contour levels were found within the data range.
  contour_set = ax.tricontour(triang, plotarray, **kwargs)
*****Processing time:  101.0
Head statistics
  min:  0.13408042
  max:  9.888266
  std:  3.4477768
*****Processing time:  201.0
Head statistics
  min:  0.12681848
  max:  9.885522
  std:  3.4224842

[Done] exited with code=0 in 2.069 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
flopy is installed in /usr/lib/python3.7/site-packages/flopy
Adding  10 GHBs for stress period 1.
Adding  10 GHBs for stress period 2.
Levels:  [ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]
Extent:  (10.0, 90.0, 10.0, 90.0)
*****Processing time:  1.0
Head statistics
  min:  10.0
  max:  10.0
  std:  0.0
/usr/lib/python3.7/site-packages/flopy/plot/map.py:290: UserWarning: No contour levels were found within the data range.
  contour_set = ax.tricontour(triang, plotarray, **kwargs)
*****Processing time:  101.0
Head statistics
  min:  0.13408042
  max:  9.888266
  std:  3.4477768
*****Processing time:  201.0
Head statistics
  min:  0.12681848
  max:  9.885522
  std:  3.4224842

[Done] exited with code=0 in 2.061 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
flopy is installed in /usr/lib/python3.7/site-packages/flopy
Adding  10 GHBs for stress period 1.
Adding  10 GHBs for stress period 2.
Traceback (most recent call last):
  File "/home/aquitard/Projects/cemetary_modflowpy/main.py", line 93, in <module>
    cbb = bf.CellBudgetFile(modelname+'.cbc')
  File "/usr/lib/python3.7/site-packages/flopy/utils/binaryfile.py", line 572, in __init__
    raise IOError('datafile error: file is empty: ' + str(filename))
OSError: datafile error: file is empty: tutorial2.cbc

[Done] exited with code=1 in 1.145 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
flopy is installed in /usr/lib/python3.7/site-packages/flopy
Adding  10 GHBs for stress period 1.
Adding  10 GHBs for stress period 2.
Traceback (most recent call last):
  File "/home/aquitard/Projects/cemetary_modflowpy/main.py", line 93, in <module>
    cbb = bf.CellBudgetFile(modelname+'.cbc')
  File "/usr/lib/python3.7/site-packages/flopy/utils/binaryfile.py", line 572, in __init__
    raise IOError('datafile error: file is empty: ' + str(filename))
OSError: datafile error: file is empty: tutorial2.cbc

[Done] exited with code=1 in 0.933 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
flopy is installed in /usr/lib/python3.7/site-packages/flopy
Adding  10 GHBs for stress period 1.
Adding  10 GHBs for stress period 2.
Levels:  [ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]
Extent:  (10.0, 90.0, 10.0, 90.0)
*****Processing time:  1.0
Head statistics
  min:  10.0
  max:  10.0
  std:  0.0
/usr/lib/python3.7/site-packages/flopy/plot/map.py:290: UserWarning: No contour levels were found within the data range.
  contour_set = ax.tricontour(triang, plotarray, **kwargs)
*****Processing time:  101.0
Head statistics
  min:  0.13408042
  max:  9.888266
  std:  3.4477768
*****Processing time:  201.0
Head statistics
  min:  0.13408042
  max:  9.888266
  std:  3.4477768

[Done] exited with code=0 in 1.936 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
  File "/home/aquitard/Projects/cemetary_modflowpy/main.py", line 21
    [1,1,50,1,1],\
    ^
IndentationError: unexpected indent

[Done] exited with code=1 in 0.038 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
  File "/home/aquitard/Projects/cemetary_modflowpy/main.py", line 22
    [1,1,10,1,1]]
                ^
SyntaxError: invalid syntax

[Done] exited with code=1 in 0.041 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
flopy is installed in /usr/lib/python3.7/site-packages/flopy
Traceback (most recent call last):
  File "/home/aquitard/Projects/cemetary_modflowpy/main.py", line 47, in <module>
    lpf = flopy.modflow.ModflowLpf(mf, hk=hk, vka=vka, sy=sy, ss=ss, laytyp=laytyp, ipakcb=53)
  File "/usr/lib/python3.7/site-packages/flopy/modflow/mflpf.py", line 258, in __init__
    locat=self.unit_number[0])
  File "/usr/lib/python3.7/site-packages/flopy/utils/util_array.py", line 563, in __init__
    self.util_2ds = self.build_2d_instances()
  File "/usr/lib/python3.7/site-packages/flopy/utils/util_array.py", line 790, in build_2d_instances
    ' != to shape[0]:' + str(self.shape[0])
AssertionError: length of 3d enumerable:5 != to shape[0]:1

[Done] exited with code=1 in 0.869 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
flopy is installed in /usr/lib/python3.7/site-packages/flopy
Traceback (most recent call last):
  File "/home/aquitard/Projects/cemetary_modflowpy/main.py", line 56, in <module>
    condleft = hk * (stageleft - zbot) * delc
TypeError: can't multiply sequence by non-int of type 'float'

[Done] exited with code=1 in 1.068 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
flopy is installed in /usr/lib/python3.7/site-packages/flopy
Adding  10 GHBs for stress period 1.
Traceback (most recent call last):
  File "/home/aquitard/Projects/cemetary_modflowpy/main.py", line 66, in <module>
    condleft = hk * (stageleft - zbot) * delc
TypeError: can't multiply sequence by non-int of type 'float'

[Done] exited with code=1 in 1.1 seconds

[Running] python -u "/home/aquitard/Projects/cemetary_modflowpy/main.py"
flopy is installed in /usr/lib/python3.7/site-packages/flopy
Adding  10 GHBs for stress period 1.
Adding  10 GHBs for stress period 2.
Traceback (most recent call last):
  File "/home/aquitard/Projects/cemetary_modflowpy/main.py", line 110, in <module>
    raise Exception('MODFLOW did not terminate normally.')
Exception: MODFLOW did not terminate normally.

[Done] exited with code=1 in 0.9 seconds

